log
Thu Apr 21 11:32:09 HSP 2022: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 10/70
8a56e03
Thu Apr 21 11:35:09 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
01ec5ff
Thu Apr 21 11:42:15 HSP 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
22c7977
Thu Apr 21 11:50:30 HSP 2022: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
0d95bf7
Thu Apr 21 11:52:08 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
2f4f48a
Thu Apr 21 12:03:28 HSP 2022: 
 treemap.c | 35 ++++++++++++++++++++++++-----------
 1 file changed, 24 insertions(+), 11 deletions(-)
 tests:  13|5
total_score: 25/70
2adb5c3
Thu Apr 21 12:05:43 HSP 2022: 
 treemap.c | 18 +++---------------
 1 file changed, 3 insertions(+), 15 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:74:12: error: 'tree' undeclared (first use in this function)
         if(tree->lower_than(key, aux->pair->key) == 1){
            ^~~~
treemap.c:74:12: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:74:29: error: 'key' undeclared (first use in this function)
         if(tree->lower_than(key, aux->pair->key) == 1){
                             ^~~
treemap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
beaded1
Thu Apr 21 12:09:45 HSP 2022: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:72:5: error: 'tree' undeclared (first use in this function)
     tree->current = aux;
     ^~~~
treemap.c:72:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
7cac98b
Thu Apr 21 12:12:46 HSP 2022: 
 treemap.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:74:12: error: 'tree' undeclared (first use in this function)
         if(tree->lower_than(aux->pair->key, x->pair->key) == 1){
            ^~~~
treemap.c:74:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ac758b4
Thu Apr 21 12:12:58 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:74:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than(aux->pair->key, x->pair->key) == 1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3aea08e
